--- a/src/content/posts/home-k8s-first-day.mdx
+++ b/src/content/posts/home-k8s-first-day.mdx
@@ -14,8 +14,10 @@ publishDate: "2025-03-22"
 category: "Home Data Center"
 readTime: "8 min read"
 image: "/images/blog/home-k8s-first-day/hero.jpg"
-tags: ["Kubernetes", "Home Lab", "WordPress", "DevOps", "Self-Hosting", "Container Orchestration"]
+tags: ["Kubernetes", "Home Lab", "DevOps", "Self-Hosting", "Container Orchestration"]
 ---
+
+_Disclaimer: I am not affiliated with any of the brands or products mentioned in this post, and I do not receive any compensation for the links provided. These links are included solely for your convenience to help you find more information._
 
 import { Image } from 'astro:assets';
 import heroImage from '../../../public/images/blog/home-k8s-first-day/hero.jpg';
