--- a/src/content/posts/home-k8s-first-day.mdx
+++ b/src/content/posts/home-k8s-first-day.mdx
@@ -6,10 +6,9 @@ author:
   bio: "Senior DevOps Engineer passionate about container orchestration, home labs, and building scalable infrastructure from the ground up."
   avatar: "/images/authors/skill-wanderer-avatar.jpg"
   social:
-    twitter: "https://twitter.com/skillwanderer"
-    linkedin: "https://linkedin.com/in/skillwanderer"
-    github: "https://github.com/skill-wanderer"
-    website: "https://blog.skill-wanderer.com"
+    linkedin: "/quan-nguyen-skill-wanderer"
+    github: "skill-wanderer"
+    website: "https://blog-v2.skill-wanderer.com"
 publishDate: "2025-03-22"
 category: "Home Data Center"
 readTime: "8 min read"
