--- a/src/content/posts/home-k8s-first-day.mdx
+++ b/src/content/posts/home-k8s-first-day.mdx
@@ -2,9 +2,9 @@
 title: "Building My Digital Home: A Kubernetes and WordPress Beginning"
 description: "The journey from idle hardware to a functioning Kubernetes cluster - documenting the first day of launching a home data center with WordPress"
 author:
-  name: "Skill-Wanderer"
+  name: "Quan Nguyen"
   bio: "
-  Hello! I'm Skill-Wanderer. My greatest passion is to light the way for learners like you, helping you explore the exciting worlds of technology and business through highly practical e-learning. I truly believe that quality education shapes brighter futures, which is why I offer accessible core learning content—often curated with the help of AI to bring you the best efficiently—completely free of charge.
+  Hello! I'm Quan Nguyen. My greatest passion is to light the way for learners like you, helping you explore the exciting worlds of technology and business through highly practical e-learning. I truly believe that quality education shapes brighter futures, which is why I offer accessible core learning content—often curated with the help of AI to bring you the best efficiently—completely free of charge.
 
 
 
