add day -1 content

--- a/src/content/posts/home-k8s-first-day.mdx
+++ b/src/content/posts/home-k8s-first-day.mdx
@@ -30,7 +30,7 @@ Think of me as your dedicated companion on an exciting adventure of discovery. L
   social:
     linkedin: "/quan-nguyen-skill-wanderer"
     github: "skill-wanderer"
-    website: "https://blog-v2.skill-wanderer.com"
+    website: "https://wanderings.skill-wanderer.com"
 publishDate: "2025-03-22"
 category: "Home Data Center"
 readTime: "8 min read"
@@ -79,7 +79,7 @@ Despite the effort, navigating those unique challenges and seeing this WordPress
 
 In this inaugural post, I want to share the story of this first major milestone: getting this specific WordPress site up, running, and exposed to the world. Think of it as the successful maiden voyage.
 
-Day 1 of the k8s launch went great! On that note, get ready for my upcoming series where I'll be writing about the steps involved in [setting up and hosting your own home data center](https://blog.skill-wanderer.com/category/home-data-center/setup-home-data-center-series/).
+Day 1 of the k8s launch went great! On that note, get ready for my upcoming series where I'll be writing about the steps involved in setting up and hosting your own home data center.
 
 ## What's Next?
 
