--- a/src/content/posts/before-we-continue-chronicles-of-a-home-data-center-lets-talk-ai-skills.mdx
+++ b/src/content/posts/before-we-continue-chronicles-of-a-home-data-center-lets-talk-ai-skills.mdx
@@ -38,6 +38,10 @@ tags: ["Artificial Intelligence", "AI Tools", "Skills Development", "Collaborati
 _Disclaimer: I am not affiliated with any of the brands or products mentioned in this post, and I do not receive any compensation for the links provided. These links are included solely for your convenience to help you find more information._
 
 import { Image } from 'astro:assets';
+import mySecretWeaponImage from '../../../public/images/blog/before-we-continue-chronicles-of-a-home-data-center-lets-talk-ai-skills/My Secret Weapon AI Assistants.jpg';
+import theDilemmaImage from '../../../public/images/blog/before-we-continue-chronicles-of-a-home-data-center-lets-talk-ai-skills/The Dilemma Setting You Up for Success.jpg';
+import aiHypeVsRealityImage from '../../../public/images/blog/before-we-continue-chronicles-of-a-home-data-center-lets-talk-ai-skills/AI Hype vs. Reality My Thoughts on Collaboration and Quality.webp';
+import shiftingGearsImage from '../../../public/images/blog/before-we-continue-chronicles-of-a-home-data-center-lets-talk-ai-skills/Shifting Gears Focusing on AI Literacy (Temporarily!).jpg';
 
 Hey everyone,
 
@@ -48,7 +52,7 @@ This wasn't an easy decision. I'm incredibly excited about self-hosting, Kuberne
 ## My Secret Weapon: AI Assistants
 
 <Image 
-  src="/images/blog/before-we-continue-chronicles-of-a-home-data-center-lets-talk-ai-skills/My Secret Weapon AI Assistants.jpg"
+  src={mySecretWeaponImage}
   alt="My Secret Weapon: AI Assistants"
   class="rounded-lg shadow-lg mb-6"
 />
@@ -69,7 +73,7 @@ And, if you don't already notice, even crafting this very blog post explaining t
 ## The Dilemma: Setting You Up for Success
 
 <Image 
-  src="/images/blog/before-we-continue-chronicles-of-a-home-data-center-lets-talk-ai-skills/The Dilemma Setting You Up for Success.jpg"
+  src={theDilemmaImage}
   alt="The Dilemma: Setting You Up for Success"
   class="rounded-lg shadow-lg mb-6"
 />
@@ -85,7 +89,7 @@ My personal dilemma reflects a larger context we're all navigating in this rapid
 ## AI Hype vs. Reality: My Thoughts on Collaboration and Quality
 
 <Image 
-  src="/images/blog/before-we-continue-chronicles-of-a-home-data-center-lets-talk-ai-skills/AI Hype vs. Reality My Thoughts on Collaboration and Quality.webp"
+  src={aiHypeVsRealityImage}
   alt="AI Hype vs. Reality: My Thoughts on Collaboration and Quality"
   class="rounded-lg shadow-lg mb-6"
 />
@@ -129,7 +133,7 @@ However, one thing feels certain: AI will fundamentally change how we work, lear
 ## Shifting Gears: Focusing on AI Literacy (Temporarily!)
 
 <Image 
-  src="/images/blog/before-we-continue-chronicles-of-a-home-data-center-lets-talk-ai-skills/Shifting Gears Focusing on AI Literacy (Temporarily!).jpg"
+  src={shiftingGearsImage}
   alt="Shifting Gears: Focusing on AI Literacy (Temporarily!)"
   class="rounded-lg shadow-lg mb-6"
 />
