--- a/src/content/posts/before-we-continue-chronicles-of-a-home-data-center-lets-talk-ai-skills.mdx
+++ b/src/content/posts/before-we-continue-chronicles-of-a-home-data-center-lets-talk-ai-skills.mdx
@@ -45,9 +45,9 @@ import shiftingGearsImage from '../../../public/images/blog/before-we-continue-c
 
 Hey everyone,
 
-If you've been following along with my '[Chronicles of a Home Data Center](https://blog.skill-wanderer.com/category/home-data-center/setup-home-data-center-series/)' series – charting the journey of building the very infrastructure hosting this blog – you might be wondering where the next technical deep-dive post is. Well, I've decided to hit the pause button on the '[Chronicles of a Home Data Center](https://blog.skill-wanderer.com/category/home-data-center/setup-home-data-center-series/)' series, just for a little while.
+If you've been following along with my '[Chronicles of a Home Data Center](https://wanderings.skill-wander.com/category/home-data-center/setup-home-data-center-series/)' series – charting the journey of building the very infrastructure hosting this blog – you might be wondering where the next technical deep-dive post is. Well, I've decided to hit the pause button on the '[Chronicles of a Home Data Center](https://wanderings.skill-wander.com/category/home-data-center/setup-home-data-center-series/)' series, just for a little while.
 
-This wasn't an easy decision. I'm incredibly excited about self-hosting, Kubernetes, and sharing that journey through the '[Chronicles of a Home Data Center](https://blog.skill-wanderer.com/category/home-data-center/setup-home-data-center-series/)'. However, as I went through the process of setting everything up – configuring the cluster, tackling networking, deploying persistent storage, and getting this WordPress site running smoothly – I had a crucial realization.
+This wasn't an easy decision. I'm incredibly excited about self-hosting, Kubernetes, and sharing that journey through the '[Chronicles of a Home Data Center](https://wanderings.skill-wander.com/category/home-data-center/setup-home-data-center-series/)'. However, as I went through the process of setting everything up – configuring the cluster, tackling networking, deploying persistent storage, and getting this WordPress site running smoothly – I had a crucial realization.
 
 ## My Secret Weapon: AI Assistants
 
@@ -57,7 +57,7 @@ This wasn't an easy decision. I'm incredibly excited about self-hosting, Kuberne
   class="rounded-lg shadow-lg mb-6"
 />
 
-The truth is, I didn't do it alone. Far from it. Throughout the setup, troubleshooting, and optimization phases documented (or soon-to-be documented!) in the '[Chronicles of a Home Data Center](https://blog.skill-wanderer.com/category/home-data-center/setup-home-data-center-series/)', I relied heavily on my trusty AI companions – tools like [Google's Gemini](https://gemini.google.com/), [Anthropic's Claude](https://claude.ai/), and others.
+The truth is, I didn't do it alone. Far from it. Throughout the setup, troubleshooting, and optimization phases documented (or soon-to-be documented!) in the '[Chronicles of a Home Data Center](https://wanderings.skill-wander.com/category/home-data-center/setup-home-data-center-series/)', I relied heavily on my trusty AI companions – tools like [Google's Gemini](https://gemini.google.com/), [Anthropic's Claude](https://claude.ai/), and others.
 
 These AI assistants were instrumental in countless ways:
 
@@ -66,7 +66,7 @@ These AI assistants were instrumental in countless ways:
 • Trying to understand a complex networking concept within k8s? AI explained it in different ways until it clicked.
 • Debugging why a pod wasn't starting? AI offered potential causes and solutions.
 
-These tools were instrumental. They accelerated the process, helped me overcome hurdles I would have spent hours (or days!) wrestling with, and ultimately enabled the success of the project featured in the '[Chronicles of a Home Data Center](https://blog.skill-wanderer.com/category/home-data-center/setup-home-data-center-series/)' so far.
+These tools were instrumental. They accelerated the process, helped me overcome hurdles I would have spent hours (or days!) wrestling with, and ultimately enabled the success of the project featured in the '[Chronicles of a Home Data Center](https://wanderings.skill-wander.com/category/home-data-center/setup-home-data-center-series/)' so far.
 
 And, if you don't already notice, even crafting this very blog post explaining the pause involved collaboration with my AI friend, Gemini. While the core idea, the desired style, and the final check on all content are firmly mine, Gemini helped handle some of the nitty-gritty details of phrasing and structuring the text – a perfect illustration of how integrated these tools can become, even beyond purely technical tasks.
 
@@ -78,11 +78,11 @@ And, if you don't already notice, even crafting this very blog post explaining t
   class="rounded-lg shadow-lg mb-6"
 />
 
-And that's where the pause comes in. It struck me that continuing to post detailed technical walkthroughs for the '[Chronicles of a Home Data Center](https://blog.skill-wanderer.com/category/home-data-center/setup-home-data-center-series/)' without acknowledging the significant role AI played in my process, and more importantly, without ensuring you feel comfortable leveraging these same tools, would be a disservice.
+And that's where the pause comes in. It struck me that continuing to post detailed technical walkthroughs for the '[Chronicles of a Home Data Center](https://wanderings.skill-wander.com/category/home-data-center/setup-home-data-center-series/)' without acknowledging the significant role AI played in my process, and more importantly, without ensuring you feel comfortable leveraging these same tools, would be a disservice.
 
 It would be like showing you how to assemble complex furniture but neglecting to mention I used power tools while you only have a manual screwdriver. The end result might look achievable, but the process would be vastly different and potentially frustrating if you tried to replicate it directly without the same assistance or the skills to use it effectively.
 
-My goal with the '[Chronicles of a Home Data Center](https://blog.skill-wanderer.com/category/home-data-center/setup-home-data-center-series/)' isn't just to show what I built, but to empower you to build similar things. If a core part of my process involves effectively interacting with AI, then simply showing the technical steps isn't enough. It feels incomplete and potentially sets you up for unnecessary hurdles. Addressing the AI skills first feels crucial for genuine empowerment.
+My goal with the '[Chronicles of a Home Data Center](https://wanderings.skill-wander.com/category/home-data-center/setup-home-data-center-series/)' isn't just to show what I built, but to empower you to build similar things. If a core part of my process involves effectively interacting with AI, then simply showing the technical steps isn't enough. It feels incomplete and potentially sets you up for unnecessary hurdles. Addressing the AI skills first feels crucial for genuine empowerment.
 
 My personal dilemma reflects a larger context we're all navigating in this rapidly evolving technological landscape. To effectively build the AI skills we actually need, it helps to first grapple with the reality of AI beyond the headlines and the hype. So, before we discuss how to build AI literacy later on, I want to generally share some stories and thoughts about AI based on my experiences. My hope is that these perspectives can help us all develop a more grounded and realistic mindset for collaborating with these powerful tools as we move into the future.
 
@@ -142,7 +142,7 @@ So, based on my own experience and these broader observations, for the next litt
 
 For those of you interested in learning more about AI literacy, please know that I'm actively thinking about the best way to achieve this and deliver the content effectively. I have some initial ideas brewing. For example (and as a little teaser!), one avenue I'm seriously considering – tying directly back into the 'Chronicles of a Home Data Center' theme – is setting up and hosting a dedicated Moodle LMS (Learning Management System) site right here on my Kubernetes cluster. This could potentially serve as a free, non-profit platform for interactive AI literacy learning. It's just one idea at this stage, and I'll share more concrete plans on how we'll tackle the AI literacy content with you all soon.
 
-I believe building this foundation will make the rest of the '[Chronicles of a Home Data Center](https://blog.skill-wanderer.com/category/home-data-center/setup-home-data-center-series/)' journey (and many other tech projects you undertake) much smoother and more successful for everyone.
+I believe building this foundation will make the rest of the '[Chronicles of a Home Data Center](https://wanderings.skill-wander.com/category/home-data-center/setup-home-data-center-series/)' journey (and many other tech projects you undertake) much smoother and more successful for everyone.
 
 ## What Do You Think?
 
