--- a/src/content/posts/deep-dive-into-notebooklm.mdx
+++ b/src/content/posts/deep-dive-into-notebooklm.mdx
@@ -43,7 +43,7 @@ My goal isn't just listing features. As a Skill-Wanderer, I want to explore how 
 
 My colleague's interest encapsulates [NotebookLM's](https://notebooklm.google/) promise: a personal AI research assistant, expert in your own information. Its defining "source-grounding" means its knowledge is strictly limited to your uploaded documents, becoming an "instant expert" on your materials.
 
-I experienced this firsthand, as I mentioned in [Day 1](https://blog.skill-wanderer.com/the-skill-wanderers-compass/), when it helped me make sense of that massive [Orange Pi](http://www.orangepi.org/orangepiwiki/index.php/Main_Page) manual. But it was more than just general sense-making. I was specifically trying to figure out how to install [Ubuntu](https://en.wikipedia.org/wiki/Ubuntu) on its [eMMC (embedded MultiMediaCard)](https://en.wikipedia.org/wiki/MultiMediaCard#eMMC). The seller had told me they only knew how to install it on an [SD card](https://en.wikipedia.org/wiki/SD_card), which was less ideal for performance. I'd even bought an SD card based on that, which is now, amusingly, left for nothing!
+I experienced this firsthand, as I mentioned in [Day 1](https://wanderings.skill-wanderer.com/the-skill-wanderers-compass/), when it helped me make sense of that massive [Orange Pi](http://www.orangepi.org/orangepiwiki/index.php/Main_Page) manual. But it was more than just general sense-making. I was specifically trying to figure out how to install [Ubuntu](https://en.wikipedia.org/wiki/Ubuntu) on its [eMMC (embedded MultiMediaCard)](https://en.wikipedia.org/wiki/MultiMediaCard#eMMC). The seller had told me they only knew how to install it on an [SD card](https://en.wikipedia.org/wiki/SD_card), which was less ideal for performance. I'd even bought an SD card based on that, which is now, amusingly, left for nothing!
 
 Frustrated but hopeful, I fed the lengthy manual into NotebookLM and asked directly: "What are the methods to install Ubuntu on this Orange Pi model?" To my delight, NotebookLM pointed me exactly to the section detailing eMMC installation. It was a breeze to follow the instructions once I knew where they were. Without asking NotebookLM that specific question and having it search the document for me, I'm sure I would have missed that capability, relying only on the seller's limited knowledge and wasting a lot more time. That discovery alone saved me significant setup hassle and showed me the power of having a tool that can deeply query your specific sources.
 
@@ -79,7 +79,7 @@ NotebookLM also helps create new things from your sources.
 
 • **Generating New Formats**: From the Workday document, I asked it to "Create a study guide for the key concepts related to 'model sheets'." It produced key terms, definitions, and discussion questions. It also generates FAQs, tables of contents, timelines, and briefing documents. I prompted, "Create an outline for an internal training session on 'model sheets,'" and got a solid starting point, great for overcoming "blank page syndrome".
 
-• **Diving into Web Sources, YouTube, and the Audio Overview Surprise**: One of the areas I was keen to test was [NotebookLM's](https://notebooklm.google/) ability to process web URLs directly. You might remember from my [Day 1 post](https://blog.skill-wanderer.com/the-skill-wanderers-compass/), I mentioned my very latest exploration was digging into something called an ["MCP server" (Model Context Protocol server)](https://modelcontextprotocol.io/introduction). To understand more, I fed [NotebookLM](https://notebooklm.google/) the URL for the `https://github.com/github/github-mcp-server` repository. NotebookLM ingested the content, allowing me to query it to understand what `[github-mcp-server](https://github.com/github/github-mcp-server)` was all about. Then, "for fun," I generated an Audio Overview from this source. As the document you shared described, it created an informative and entertaining podcast-style conversation between two AI voices (male and female) discussing `[github-mcp-server](https://github.com/github/github-mcp-server)`. The surprise was how human-like they sounded. My wife, hearing it, thought the female AI voice was a familiar (human) podcast host and mistook the male voice for human too! It shows how far this tech has come. NotebookLM can also process public YouTube video URLs, using their transcripts to provide summaries, answer questions, or even generate those audio overviews. This sounds incredibly useful for learning from the vast amount of educational content on YouTube. However, I must admit I haven't had much opportunity to try the YouTube feature extensively. The reality for me, and likely for many of you, is that a significant portion of my learning material comes from paid e-learning platforms. I'm often immersed in courses on Coursera, Pluralsight, LinkedIn Learning, Udemy, DataCamp, ACloudGuru, and other fantastic (but subscription-based) learning sites. As a result, because NotebookLM needs direct access to the content URL, it's currently unable to process materials that sit behind a login wall. This is a practical limitation for those of us who rely heavily on these structured, paid courses. If any readers have found clever workarounds or know of ways to bridge this gap with [NotebookLM](https://notebooklm.google/) (while respecting content rights, of course!), I would be genuinely thrilled to hear about it and would gladly update this post with your insights!
+• **Diving into Web Sources, YouTube, and the Audio Overview Surprise**: One of the areas I was keen to test was [NotebookLM's](https://notebooklm.google/) ability to process web URLs directly. You might remember from my [Day 1 post](https://wanderings.skill-wanderer.com/the-skill-wanderers-compass/), I mentioned my very latest exploration was digging into something called an ["MCP server" (Model Context Protocol server)](https://modelcontextprotocol.io/introduction). To understand more, I fed [NotebookLM](https://notebooklm.google/) the URL for the `https://github.com/github/github-mcp-server` repository. NotebookLM ingested the content, allowing me to query it to understand what `[github-mcp-server](https://github.com/github/github-mcp-server)` was all about. Then, "for fun," I generated an Audio Overview from this source. As the document you shared described, it created an informative and entertaining podcast-style conversation between two AI voices (male and female) discussing `[github-mcp-server](https://github.com/github/github-mcp-server)`. The surprise was how human-like they sounded. My wife, hearing it, thought the female AI voice was a familiar (human) podcast host and mistook the male voice for human too! It shows how far this tech has come. NotebookLM can also process public YouTube video URLs, using their transcripts to provide summaries, answer questions, or even generate those audio overviews. This sounds incredibly useful for learning from the vast amount of educational content on YouTube. However, I must admit I haven't had much opportunity to try the YouTube feature extensively. The reality for me, and likely for many of you, is that a significant portion of my learning material comes from paid e-learning platforms. I'm often immersed in courses on Coursera, Pluralsight, LinkedIn Learning, Udemy, DataCamp, ACloudGuru, and other fantastic (but subscription-based) learning sites. As a result, because NotebookLM needs direct access to the content URL, it's currently unable to process materials that sit behind a login wall. This is a practical limitation for those of us who rely heavily on these structured, paid courses. If any readers have found clever workarounds or know of ways to bridge this gap with [NotebookLM](https://notebooklm.google/) (while respecting content rights, of course!), I would be genuinely thrilled to hear about it and would gladly update this post with your insights!
 
 • **Multilingual Outputs**: A valuable feature for those working across languages is the output language selector. You can choose your preferred language for generated text outputs like study guides or chat responses, making it easier to share work internationally.
 
